tdf#108556 - Start center welcome text should respect window width

Wordwrap on second line added

Change-Id: I1b50173eca4fa1c19d25291413fa0bebbcad9190